// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchAppBoundUsersAndGroups should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
        "Organization",
      ],
      "_key": "60259a2ad81e1a474d4e7c83",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "_id": "60259a2ad81e1a474d4e7c83",
            "created": "2021-02-11T20:57:14.837Z",
            "displayName": null,
            "id": "60259a2ad81e1a474d4e7c83",
            "logoUrl": null,
          },
        },
      ],
      "_type": "jumpcloud_account",
      "createdOn": 1613077034837,
      "displayName": "60259a2ad81e1a474d4e7c83",
      "id": "60259a2ad81e1a474d4e7c83",
      "logoUrl": undefined,
      "name": "60259a2ad81e1a474d4e7c83",
      "webLink": "https://console.jumpcloud.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "6026bec6b8207255280d5981",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "_id": "6026bec6b8207255280d5981",
            "account_locked": false,
            "account_locked_date": null,
            "activated": false,
            "addresses": Array [],
            "allow_public_key": true,
            "attributes": Array [],
            "company": "",
            "costCenter": "",
            "created": "2021-02-12T17:45:42.369Z",
            "department": "",
            "description": "Testing desc",
            "disableDeviceMaxLoginAttempts": false,
            "displayname": "Austin K",
            "email": "austin.kelleher+testjc@jupiterone.com",
            "employeeIdentifier": null,
            "employeeType": "",
            "enable_managed_uid": false,
            "enable_user_portal_multifactor": false,
            "external_dn": "",
            "external_source_type": "",
            "externally_managed": false,
            "firstname": "Austin",
            "id": "6026bec6b8207255280d5981",
            "jobTitle": "",
            "lastname": "Kelleher",
            "ldap_binding_user": false,
            "location": "",
            "mfa": Object {
              "configured": false,
              "exclusion": false,
            },
            "middlename": "",
            "password_expired": false,
            "password_never_expires": false,
            "passwordless_sudo": false,
            "phoneNumbers": Array [],
            "samba_service_user": false,
            "ssh_keys": Array [],
            "state": "ACTIVATED",
            "sudo": false,
            "suspended": false,
            "systemUsername": "",
            "tags": Array [],
            "totp_enabled": false,
            "unix_guid": 5001,
            "unix_uid": 5001,
            "userTags": undefined,
            "username": "austinkellehertest",
          },
        },
      ],
      "_type": "jumpcloud_user",
      "active": false,
      "company": "",
      "createdOn": 1613151942369,
      "department": "",
      "description": "Testing desc",
      "displayName": "austinkellehertest",
      "email": "austin.kelleher+testjc@jupiterone.com",
      "employeeId": undefined,
      "employeeType": "",
      "externallyManaged": false,
      "firstName": "Austin",
      "id": "6026bec6b8207255280d5981",
      "jobTitle": "",
      "lastName": "Kelleher",
      "ldapBindingUser": false,
      "login": "austinkellehertest",
      "mfaConfigured": false,
      "mfaEnabled": false,
      "mfaExclusion": false,
      "mfaExclusionUntil": undefined,
      "name": "Austin Kelleher",
      "sambaServiceUser": false,
      "sudo": false,
      "suspended": false,
      "username": "austinkellehertest",
      "webLink": "https://console.jumpcloud.com/#/users/6026bec6b8207255280d5981/details",
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "60259a3cb544065d1eaf2760",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "attributes": null,
            "description": "",
            "email": "",
            "id": "60259a3cb544065d1eaf2760",
            "name": "All Users",
            "type": "user_group",
          },
        },
      ],
      "_type": "jumpcloud_group",
      "attributes": undefined,
      "createdOn": undefined,
      "description": "",
      "displayName": "All Users",
      "id": "60259a3cb544065d1eaf2760",
      "name": "All Users",
      "webLink": "https://console.jumpcloud.com/#/groups/user/60259a3cb544065d1eaf2760/details",
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "6026da081f24755306c2ee0d",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "attributes": null,
            "description": "Testing!",
            "email": "",
            "id": "6026da081f24755306c2ee0d",
            "name": "My Test Group",
            "type": "user_group",
          },
        },
      ],
      "_type": "jumpcloud_group",
      "attributes": undefined,
      "createdOn": undefined,
      "description": "Testing!",
      "displayName": "My Test Group",
      "id": "6026da081f24755306c2ee0d",
      "name": "My Test Group",
      "webLink": "https://console.jumpcloud.com/#/groups/user/6026da081f24755306c2ee0d/details",
    },
    Object {
      "_class": Array [
        "Application",
      ],
      "_key": "617c3664e6f8ae27f7e1201e",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "_id": "617c3664e6f8ae27f7e1201e",
            "active": true,
            "beta": false,
            "color": null,
            "created": "2021-10-29T17:59:00.448Z",
            "databaseAttributes": Array [],
            "description": "",
            "displayLabel": "AWS SSO",
            "displayName": "AWS SSO",
            "id": "617c3664e6f8ae27f7e1201e",
            "learnMore": "https://support.jumpcloud.com/support/s/article/Single-Sign-On-SSO-With-AWS-SSO",
            "logo": Object {
              "url": "https://s3.amazonaws.com/static.jumpcloud.com/applications/logos/application-icon-aws-sso.png",
            },
            "name": "aws-sso",
            "organization": "60259a2ad81e1a474d4e7c83",
            "sso": Object {
              "beta": false,
              "idpCertExpirationAt": "2026-10-29T17:58:59.000Z",
              "jit": false,
              "type": "saml",
            },
            "ssoUrl": "https://sso.jumpcloud.com/saml2/aws-sso",
          },
        },
      ],
      "_type": "jumpcloud_application",
      "active": true,
      "createdOn": 1635530340448,
      "description": "",
      "displayName": "AWS SSO",
      "id": "617c3664e6f8ae27f7e1201e",
      "name": "aws-sso",
      "ssoUrl": "https://sso.jumpcloud.com/saml2/aws-sso",
      "webLink": "https://console.jumpcloud.com/#/sso/617c3664e6f8ae27f7e1201e/details",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|6026bec6b8207255280d5981",
      "_toEntityKey": "6026bec6b8207255280d5981",
      "_type": "jumpcloud_account_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|60259a3cb544065d1eaf2760",
      "_toEntityKey": "60259a3cb544065d1eaf2760",
      "_type": "jumpcloud_account_has_group",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|6026da081f24755306c2ee0d",
      "_toEntityKey": "6026da081f24755306c2ee0d",
      "_type": "jumpcloud_account_has_group",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|617c3664e6f8ae27f7e1201e",
      "_toEntityKey": "617c3664e6f8ae27f7e1201e",
      "_type": "jumpcloud_account_has_application",
      "displayName": "HAS",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "6026bec6b8207255280d5981",
      "_key": "6026bec6b8207255280d5981|assigned|617c3664e6f8ae27f7e1201e",
      "_toEntityKey": "617c3664e6f8ae27f7e1201e",
      "_type": "jumpcloud_user_assigned_application",
      "displayName": "ASSIGNED",
    },
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "6026da081f24755306c2ee0d",
      "_key": "6026da081f24755306c2ee0d|assigned|617c3664e6f8ae27f7e1201e",
      "_toEntityKey": "617c3664e6f8ae27f7e1201e",
      "_type": "jumpcloud_group_assigned_application",
      "displayName": "ASSIGNED",
    },
  ],
  "encounteredTypes": Array [
    "jumpcloud_account",
    "jumpcloud_user",
    "jumpcloud_account_has_user",
    "jumpcloud_group",
    "jumpcloud_account_has_group",
    "jumpcloud_application",
    "jumpcloud_account_has_application",
    "jumpcloud_user_assigned_application",
    "jumpcloud_group_assigned_application",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 6,
}
`;

exports[`#fetchApplications should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
        "Organization",
      ],
      "_key": "60259a2ad81e1a474d4e7c83",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "_id": "60259a2ad81e1a474d4e7c83",
            "created": "2021-02-11T20:57:14.837Z",
            "displayName": null,
            "id": "60259a2ad81e1a474d4e7c83",
            "logoUrl": null,
          },
        },
      ],
      "_type": "jumpcloud_account",
      "createdOn": 1613077034837,
      "displayName": "60259a2ad81e1a474d4e7c83",
      "id": "60259a2ad81e1a474d4e7c83",
      "logoUrl": undefined,
      "name": "60259a2ad81e1a474d4e7c83",
      "webLink": "https://console.jumpcloud.com",
    },
    Object {
      "_class": Array [
        "Application",
      ],
      "_key": "617c3664e6f8ae27f7e1201e",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "_id": "617c3664e6f8ae27f7e1201e",
            "active": true,
            "beta": false,
            "color": null,
            "created": "2021-10-29T17:59:00.448Z",
            "databaseAttributes": Array [],
            "description": "",
            "displayLabel": "AWS SSO",
            "displayName": "AWS SSO",
            "id": "617c3664e6f8ae27f7e1201e",
            "learnMore": "https://support.jumpcloud.com/support/s/article/Single-Sign-On-SSO-With-AWS-SSO",
            "logo": Object {
              "url": "https://s3.amazonaws.com/static.jumpcloud.com/applications/logos/application-icon-aws-sso.png",
            },
            "name": "aws-sso",
            "organization": "60259a2ad81e1a474d4e7c83",
            "sso": Object {
              "beta": false,
              "idpCertExpirationAt": "2026-10-29T17:58:59.000Z",
              "jit": false,
              "type": "saml",
            },
            "ssoUrl": "https://sso.jumpcloud.com/saml2/aws-sso",
          },
        },
      ],
      "_type": "jumpcloud_application",
      "active": true,
      "createdOn": 1635530340448,
      "description": "",
      "displayName": "AWS SSO",
      "id": "617c3664e6f8ae27f7e1201e",
      "name": "aws-sso",
      "ssoUrl": "https://sso.jumpcloud.com/saml2/aws-sso",
      "webLink": "https://console.jumpcloud.com/#/sso/617c3664e6f8ae27f7e1201e/details",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|617c3664e6f8ae27f7e1201e",
      "_toEntityKey": "617c3664e6f8ae27f7e1201e",
      "_type": "jumpcloud_account_has_application",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "jumpcloud_account",
    "jumpcloud_application",
    "jumpcloud_account_has_application",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;
